# graham

./: .env  Cargo.toml
.github/: CODEOWNERS
.github/workflows/: build.yaml  pull-request.yaml
.insomnia/Workspace/: wrk_0178048b8e174fb1a8f2d10dca78d33e.yml
data/: .~lock.test.xlsx#  danang-test.xlsx  test.xlsx
migrations/2022-08-01-021012_create_stocks/: down.sql  up.sql
migrations/2022-08-11-015358_create_report_table/: down.sql  up.sql
migrations/2022-08-12-020837_create_income/: down.sql  up.sql
migrations/2022-08-15-031810_per_share_ratios/: down.sql  up.sql
migrations/2022-08-17-024726_comparative_ratios/: down.sql  up.sql
migrations/2022-08-22-055243_remove_ratios/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs
src/analysis/: analysis_count.rs  margin_of_safety.rs  mod.rs  model.rs  price_analysis.rs  price_analysis_avg.rs
src/balance/: handler.rs  mod.rs  model.rs  req.rs
src/excel_reader/: handler.rs  model.rs
src/income/: handler.rs  mod.rs  model.rs  req.rs
src/ratios/: comparative_ratios.rs  growth_ratios.rs  handler.rs  mod.rs  model.rs  per_share_ratios.rs  ratios.rs
src/report/: handler.rs  model.rs  req.rs
src/stock/: handler.rs  mod.rs  model.rs  req.rs
src/traits/: mod.rs  report_response.rs
