[package]
name = "graham"
version = "0.1.0"
authors = ["Stanley Winata <winatastanley355@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
calamine = "0.18.0"
dotenv = "0.15"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
openssl = "0.10"
r2d2 = "0.8.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
